--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "rocket chat bot",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --watch '**/*' --exec 'ts-node' src/index.ts",
     "build": "tsc",
+    "prestart": "tsc",
     "start": "node ./prod/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +21,9 @@
     "@types/node": "^14.14.21",
     "dotenv": "^8.2.0",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   }
 }
