--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "rocketbot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "rocket chat bot",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch '**/*' --exec 'ts-node' src/index.ts",
     "build": "tsc",
     "prestart": "tsc",
+    "tsnode": "ts-node",
     "start": "node ./prod/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,10 +20,11 @@
   "dependencies": {
     "@rocket.chat/sdk": "^0.2.9-2",
     "@types/node": "^14.14.21",
-    "dotenv": "^8.2.0",
+    "faker": "^5.5.3",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
